# c_print

./: CMakeLists.txt  README-es.md  README.md  c_print.c  c_print.h  c_print.pc.in  check_headers.sh  compile_and_test.sh  example.c  readme-raw.md
doc/: index.html
include/: ansi_codes.h  c_print.h  c_print_builder.h  c_print_generic.h  c_print_typed.h  color_parser.h  number_formatter.h  pattern_parser.h  string_utils.h  text_alignment.h
src/: ansi_codes.c  c_print.c  c_print_builder.c  c_print_generic.c  c_print_safe.c  color_parser.c  number_formatter.c  pattern_parser.c  string_utils.c  text_alignment.c
test/: basic.c  bun-test.js  debug_alignment.c  example_builder.c  example_generic.c  test1.c  test_builder.c  test_color_parser.c  test_features.c  test_number_formatter.c  test_string_utils.c  test_text_alignment.c
